# hushnote

./: .gitignore  .hushnoterc.example  CONTRIBUTING.md  DIARIZATION.md  README.md  SETUP.md  apply_labels.py  compress.sh  diarize.py  hushnote  label.py  merge_diarization.py  migrate_recordings.sh  pyproject.toml  record_audio.sh  requirements.txt  summarize.py  transcribe.py
.github/workflows/: deploy-pages.yml
docs/: CNAME  index.html
docs/css/: style.css
docs/js/: main.js
tests/: catchup_test.sh
